<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_name">GeoPromenade</string>
    <string name="my_profile">Mon profile</string>
    <string-array name="stagiaires">
        <item>Makam</item>
        <item>Pierre</item>
        <item>Samir</item>
        <item>Youssef</item>
        <item>Romain</item>
        <item>Toumi</item>
        <item>Dina</item>
        <item>Astride</item>
        <item>Mehenni</item>
        <item>Youssef</item>
        <item>Yaqi</item>
        <item>Welem</item>
        <item>Yann</item>
        <item>Philippe</item>
    </string-array>
    <string-array name="description">
        <item>Lorem ipsum set dolorem</item>
        <item>Lorem ipsum set dolorem</item>
        <item>Lorem ipsum set dolorem</item>
        <item>Lorem ipsum set dolorem</item>
        <item>Lorem ipsum set dolorem</item>
        <item>Lorem ipsum set dolorem</item>
        <item>Lorem ipsum set dolorem</item>
        <item>Lorem ipsum set dolorem</item>
        <item>Lorem ipsum set dolorem</item>
        <item>Lorem ipsum set dolorem</item>
        <item>Lorem ipsum set dolorem</item>
        <item>Lorem ipsum set dolorem</item>
        <item>Lorem ipsum set dolorem</item>
        <item>Lorem ipsum set dolorem</item>
        <item>Lorem ipsum set dolorem</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="email_required">Email is required!</string>
    <string name="password_required">Passwird is required!</string>
    <string name="enter_name">Name</string>
    <string name="enter_confirm_password">Confirm password</string>
    <string name="signUp">Sign Up</string>
    <string name="name_required">Le nom est requis</string>
    <string name="email_format_invalid">Invalid email format !</string>
    <string name="enter_password">Password required</string>
    <string name="password">Password</string>
    <string name="confirm_password_required">Password confirmation is required!</string>
    <string name="password_confirm_password_not_equals">Password and confirm password are different!</string>
    <string name="signup_failed">Sign up failed</string>
    <string name="user_created_successfully">User created successfully</string>
    <string name="user_creation_failed">User creation failed</string>
    <string name="user_update_failed">User update failed</string>
    <string name="access_permission_is_required">Access permission is required</string>
    <string name="reset_password">Reset password</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="you_have_an_account">You have an account ?</string>
    <string name="loading_please_wait">Loading, please wait …</string>
    <string name="confirm_password">Confirm password</string>
    <string name="signIn">Sign In</string>
    <string name="enter_email">Email</string>
    <string name="enter_firstname">Firstname</string>
    <string name="enter_lastname">Lastname</string>
    <string name="firstname_required">Firstname is required</string>
    <string name="lastname_required">Lastname is required</string>
    <string name="user_logged_out">User Logged Out</string>
    <string name="start_itinerary">Start</string>
    <string name="finish_itinerary">Finish</string>
</resources>